@@ -91,6 +91,7 @@ proc init_balloons {args} {
     set help_tips(font)  $fonts(balloon)
     set use_balloons 1
     enable_balloon Button
+    enable_balloon Scale
     enable_balloon Menubutton
     enable_balloon Label
     enable_balloon Menu "%W index active"
