@@ -5,6 +5,9 @@
 	Added [Tkenv]/show-bubbles=true/false omnetpp.ini entry.
 	TBD bubble() drawing could be a bit faster (too much Tcl code)
 
+	* added anum speed slider in main dialog 
+TBD get that working!!!!!!
+
 2004-01-06  Andras Varga
 
         * virtual bool isGUI() {return false;}
